<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="username_key">com.awa.itslearning.USERNAME</string>
    <string name="password_key">com.awa.itslearning.PASSWORD</string>
    <string name="app_name">itsLearning</string>
    <string name="title_activity_main">itsLearning</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">LOGIN</string>
    <string name="toast_exit">Press again to quit</string>
    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_toggle_menu">Menu on/off</string>
    <string name="action_toggle_javascript">Javascript on/off</string>
    <string name="no_settings">Coming soon!</string>
    <string name="action_licenses">Licenses</string>
    <string name="title_licenses">Licenses</string>
    <string name="login_fail_message">An error occurred (ID %d). Check your credentials and contact us if it persists!</string>
    <string name="login_fail_title">Login error</string>
    <string name="login_fail_ok">OK</string>
    <string name="allow_analytics_title">Allow Analytics?</string>
    <string name="allow_analytics_message">Do you want to let the app send in anonymous data about you to Google Analytics?</string>
    <string name="allow_analytics_yes">Yes</string>
    <string name="allow_analytics_no">No</string>
    <string name="title_activity_feeds">FeedsActivity</string>
    <string name="title_section1">Bulletins</string>
    <string name="title_section2">Tasks</string>
    <string name="title_section3">Changes</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="toast_refresh">Refreshed!</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="toast_thankyou">Thank you for purchasing the plus version!</string>
    <string name="placeholder_select_organization">Select school...</string>
    <string name="select_organization_title">Select school</string>
    <string name="profile_section1_title">Grades</string>

    <string-array name="planets_array">
        <item>Dashboard</item>
        <item>Profile</item>
        <item>Grades</item>
        <item>Attendance</item>
        <item>Behaviour</item>
    </string-array>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_my_profile">My profile</string>
    <string name="no_comment">No comment</string>
    <string name="title_activity_web_view_tests">WebViewTestsActivity</string>

</resources>
